test/compilable/imports/test7373a.d
module imports.test7373a;
import foo = imports.test7373b;

struct S
{
}
