test/fail_compilation/imports/a18219.d
module imports.a18219;

struct AST
{
    import b18219;
}
